openshift/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: flask-app

spec:

  selector:

    app: flask-app

  ports:

  - port: 8080

    targetPort: 8080
